appId: host.exp.exponent
---
- runFlow: seed-data.yaml
- tapOn: "PROFILE"
- assertVisible: "Alanna"
- tapOn: "Edit"
- waitForAnimationToEnd
- assertVisible: "Edit Profile"
# Clear and type new name
- clearText
- inputText: "Luna"
- tapOn: "SAVE"
- waitForAnimationToEnd
